--- a/front/index.html
+++ b/front/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
+    <script>
+      const savedTheme = localStorage.getItem('theme') || 'system';
+      const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+      const resolved = savedTheme === 'system' ? (prefersDark ? 'dark' : 'light') : savedTheme;
+      document.documentElement.setAttribute('data-theme', resolved);
+    </script>
   </head>
   <body>
     <div id="app"></div>
